--- a/Yay!.html
+++ b/Yay!.html
@@ -5,6 +5,6 @@
         <title>Yay!</title>
     </head>
     <body>
-<a href="index.hmtl">return home</a> 
+<a href="index.html">return home</a> 
     </body>
     </html>
