--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Addeline Anderson</h1>
 <!-- Navigation Bar-->
             <nav>
-                <a href="One.html">One</a>
+                <a href="One.html" target="_blank">One</a>
                 <a href="Two.html">Two</a>
                 <a href="Three.html">Three</a>
                 <a href="Yay!.html">Yay!</a>
