--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </details>
               </section>
               <footer>
-                  <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Logo" width="20%">
+                  <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Logo">
                   <span>
                     This page was created by Ralmore Richardson & Colleen van Lent. To learn more about web design, visit <a href="http://www.intro-webdesign.com" target="_blank">Intro to Web Design</a> to Web Design
                   </span>
